login and registration with proper consent forms done
admin endpoints are also added,

cognito works kinda:
- need to properly make it with proper attributes
- need to know how to sign in properly

-qr changed abit
