# backend/controllers/qrController.js
@@ -1,45 +1,15 @@
+const asyncHandler = require("../middlewares/asyncHandler");
 const qrModel = require("../models/qrModel");
+const { assertUuid, cleanString } = require("../utils/validation");
 
-exports.generateQR = async (req, res) => {
+exports.generateQR = asyncHandler(async (req, res) => {
+    const registrationId = assertUuid(req.params.registrationId, "registrationId");
+    const qr = await qrModel.generateQR(registrationId, req.auth.userId);
+    res.status(201).json(qr);
+});
 
-    try {
-
-        console.log("URL:", req.originalUrl);
-        console.log("Params:", req.params);
-
-        const participantId = req.params.participantId;
-
-        const qr = await qrModel.generateQR(participantId);
-        res.status(200).json(qr);
-
-    } catch (err) {
-
-        console.error(err);
-
-        res.status(500).json({
-            message: err.message
-        });
-
-    }
-
-};
-
-exports.getParticipantByQR = async (req, res) => {
-
-    try {
-
-        const token = req.params.token;
-
-        const participant = await qrModel.getParticipant(token);
-
-        res.status(200).json(participant);
-
-    } catch (err) {
-
-        res.status(500).json({
-            message: err.message
-        });
-
-    }
-
-};
+exports.getRegistrationByQR = asyncHandler(async (req, res) => {
+    const token = cleanString(req.params.token, "token", { required: true, max: 200 });
+    const registration = await qrModel.getRegistration(token);
+    res.json({ registration });
+});
