# backend/routes/userRoutes.js
@@ -1,8 +1,0 @@
-const express = require("express");
-const router = express.Router();
-
-const userController = require("../controllers/userController");
-
-router.get("/", userController.getUsers);
-
-module.exports = router;
